--- a/src/main/resources/static/css/place-view.css
+++ b/src/main/resources/static/css/place-view.css
@@ -4,6 +4,10 @@
   gap: 1rem;
 }
 
+.detail-hero.detail-hero-no-image {
+  grid-template-columns: 1fr;
+}
+
 .detail-image {
   width: 100%;
   min-height: 240px;
